# win-calculator

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
src/c++/: calculator.h  main.c++
src/cmake/: Calculator.desktop  qtprojectbuild.cmake  windows_metafile.rc.in
src/js/: catpuccin.js  js.qrc
src/qml/: Main.qml
